# langbot-local-agent

./: .gitignore  README.md  main.py  manifest.yaml  pyproject.toml
.github/workflows/: test.yml
components/agent_runner/: default.py  default.yaml
pkg/: config.py  context_pipeline.py  messages.py  model_calling.py  rag.py  run_assembly.py  tool_loop.py
pkg/agent_core/: __init__.py  langbot.py  loop.py  types.py
readme/: README_en_US.md  README_es_ES.md  README_ja_JP.md  README_ru_RU.md  README_th_TH.md  README_vi_VN.md  README_zh_Hans.md  README_zh_Hant.md
tests/: __init__.py  test_agent_core.py  test_model_calling.py  test_release_layout.py  test_run_assembly.py  test_runner.py  test_skills_prompt.py
