[project]
name = "langbot-local-agent"
version = "0.1.0"
description = "Built-in agent with model fallback, tools, and knowledge retrieval"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "langbot-plugin",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pkg", "components"]

[tool.uv.sources]
langbot-plugin = { path = "../langbot-plugin-sdk", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
